# Curriculum-AI

./: .env.example  .gitignore  .mcp.json  AGENT_INSTALL.md  CLAUDE.md  README.md  alembic.ini  how_to_use.md  install.py  plugin.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
alembic/: env.py
alembic/versions/: 0001_init_schema.py  0002_vectors.py
commands/: autojob-apply.md  autojob-search.md  autojob-status.md  autojob-up.md  autojob.md
config/: default.toml  portals.seed.yaml
extension/: README.md  manifest.json  options.html  options.js  popup.html  popup.js  sidepanel.html
extension/src/: background.js  page_actions.js  snapshot.js
skills/autojob/: SKILL.md
src/autojob/: __init__.py  cli.py
src/autojob/browser/: __init__.py  port.py  registry.py  snapshot.py  snapshot_js.py
src/autojob/config/: __init__.py  loader.py  settings.py
src/autojob/core/: application_service.py  apply_service.py  audit.py  browser_session.py  cv_ingest_service.py  extract_service.py  form_service.py  lmstudio.py  (+6 more)
tests/: conftest.py  fakes.py  test_act_mcp.py  test_application_guard.py  test_browser_fake.py  test_browser_mcp.py  test_browser_playwright.py  test_cv_and_extract.py  test_dashboard.py  test_db.py  test_ext_bridge.py  test_form_service.py  test_generation.py  test_hashing.py  test_health.py  test_lifecycle.py  test_map_and_apply.py  test_mcp_tools.py  test_portals_search.py  test_portals_seed.py  test_ranking.py  test_repeating_playwright.py  test_search_playwright.py
tests/fixtures/: form.html  job1.html  job2.html  results.html
(+43 files in other folders)
